force-app/main/default/objects/data_sfga__c/data_sfga__c.object-meta.xml
<CustomObject>
    <label>data sfga</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>data_sfga Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>data sfga</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>