force-app/main/default/objects/data_sfga__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>Lead Month</label>
    <type>Date</type>
</CustomField>