force-app/main/default/objects/data_sfga__c/fields/deals_per_stage__c.field-meta.xml
<CustomField>
    <fullName>deals_per_stage__c</fullName>
    <label># deals per stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>