force-app/main/default/objects/data_sfga__c/fields/Key_Word__c.field-meta.xml
<CustomField>
    <fullName>Key_Word__c</fullName>
    <label>Keywords</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>