force-app/main/default/objects/data_sfga__c/fields/of_leads__c.field-meta.xml
<CustomField>
    <fullName>of_leads__c</fullName>
    <label># of leads</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>