force-app/main/default/objects/data_sfga__c/fields/Text_Ad__c.field-meta.xml
<CustomField>
    <fullName>Text_Ad__c</fullName>
    <label>Text Ad</label>
    <length>45</length>
    <type>Text</type>
</CustomField>